# miso-fileupload

./: LICENSE  Makefile  README.md  flake.nix  miso-fileupload.cabal
client/: Main.hs
server/: Main.hs
shared/: Common.hs
static/: index.html
