cabal-version:          3.0
name:                   miso-fileupload
version:                0.1

common wasm
  if arch(wasm32)
    ghc-options:
      -Wall
      -no-hs-main
      -optl-mexec-model=reactor "-optl-Wl,--export=hs_start"
      -ddump-splices
    cpp-options:
      -DWASM

executable client
  import:
    wasm
  main-is:
    Main.hs
  build-depends:
    base,
    bytestring,
    jsaddle,
    miso,
    servant,
    text
  hs-source-dirs:
    client
  default-language:
    Haskell2010
  default-extensions:
    CPP TemplateHaskell

executable server
  import:
    wasm
  main-is:
    Main.hs
  build-depends:
    base,
    bytestring,
    case-insensitive,
    servant,
    servant-server,
    text,
    wai,
    wai-cors,
    warp
  hs-source-dirs:
    server
  default-language:
    Haskell2010
